--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,12 @@
 [theme]
-base = "light"
+base = "dark"
+primaryColor = "#9C27B0"
+backgroundColor = "#0E1117"
+secondaryBackgroundColor = "#1A1D24"
+textColor = "#FFFFFF"
+font = "sans serif"
 
 [server]
+headless = true
 enableCORS = false
+enableXsrfProtection = false
